# FetchGet

./: .env  .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
cli/: fetchget.py  others.py  setup.py  sys_interface_funcs.pyx
discord-bot/blue_v/: blue_v.py  normal_cmds.py  slash_cmds.py
discord-bot/blue_v/commands/: delete_req.py  get_req.py  patch_req.py  ping.py  post_req.py  put_req.py
discord-bot/blue_v/slash_commands/: delete.py  get.py  help.py  ping.py  post.py
discord-bot/yellow_v/: normal_commands.py  slash_commands.py  yellow_v.py
discord-bot/yellow_v/commands/: check_abusive_ip.py  delete_req.py  dns_lookup.py  get_req.py  ip_info.py  patch_req.py  ping.py  post_req.py  public_dns_list.py  put_req.py  url_checker.py  user_lookup.py  whois_lookup.py
discord-bot/yellow_v/slash_commands/: check_abusive_ip.py  dns_lookup.py  get.py  help.py  ip_info.py  patch.py  ping.py  public_dns_list.py  put.py  user_lookup.py  verify_url.py  whois_lookup.py
